# Guaro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  PYPI_CHECKLIST.md  PYPI_PUBLISHING.md  README.md  WORKFLOWS.md  app.py  config_example.py  pyproject.toml  test_config.py
.github/workflows/: ci.yml  publish.yml  workflow.yml
docs/: DATABASE.md  DEPENDENCY_INJECTION.md  DEVELOPMENT.md  DEVELOPMENT_SETUP.md  GITHUB_ACTIONS_SETUP.md  GRAPHQL.md  INSTALLATION.md  MIDDLEWARE.md  MIGRATION_GUIDE.md  MODELS.md  PUBLISH.md  PYPI_CHECKLIST.md  PYPI_PUBLISHING.md  README.md  ROUTING.md
examples/: example_default.py  example_external_config.py  example_inline.py  example_sql.py
guaro/: __init__.py  app.py
guaro/batching/: __init__.py  loader.py
guaro/config/: __init__.py  normalizer.py  schema.py
guaro/core/: __init__.py  execution_engine.py  query_ir.py  query_planner.py  registry.py  schema.py  serializers.py
guaro/db/: repository.py  router.py
guaro/db/adapters/: base.py  memory_adapter.py  migrations.py  mongo_adapter.py  sql_adapter.py
guaro/dependency/: __init__.py  injector.py
guaro/execution/: __init__.py  context.py  pipeline.py  planner.py
guaro/graphql/: __init__.py  adapter.py  dataloaders.py  schema_builder.py  selection.py
guaro/loaders/: __init__.py  relation_loader.py
guaro/middleware/: auth.py  permissions.py
guaro/models/: __init__.py  base.py
guaro/openapi/: generator.py
guaro/repositories/: __init__.py  base.py
guaro/rest/: __init__.py  adapter.py
guaro/routing/: __init__.py  route.py  router.py
guaro/serialization/: __init__.py  compiler.py  runtime.py
guaro/validation/: __init__.py  coerce.py
middleware/: auth.py
models/: post.py  user.py
routes/: posts.py  users.py  welcome.py
